--- a/writeups/synth_runner_sj.lyx
+++ b/writeups/synth_runner_sj.lyx
@@ -239,7 +239,7 @@ and
 \begin_inset Newline newline
 \end_inset
 
-Microsoft Research
+Microsoft AI and Research
 \begin_inset Newline newline
 \end_inset
 
@@ -4325,7 +4325,7 @@ Sebastian Galiani is a Professor of Economics at the University of Maryland,
 \end_layout
 
 \begin_layout AboutAuthors
-Brian Quistorff is a Researcher at Microsoft Research, Redmond.
+Brian Quistorff is a Research Economist at Microsoft AI and Research, Redmond.
 \end_layout
 
 \end_body
